  to limit the APM agent's processing to the minimum to support context
  propagation and log correlation.
+
This is listed under "Breaking changes" as a heads-up. The only possible
negative result of this `disableSend` change is some extra CPU processing time
by the agent. There is no outward functionality change.

[float]
===== Features

* Add <<context-propagation-only, `contextPropagationOnly`>> configuration
  option. This supports the use case of using the APM agent to propagate HTTP
  trace-context and to support log-correlation (adding `trace.id` et al fields
  to log records) **without** an APM server, and to otherwise reduce the
  processing time of the agent. ({issues}2393[#2393])
+
This is similar to <<disable-send, `disableSend`>>, but differs in that
`contextPropagationOnly: true` tells the agent to skip unnecessary work.

* The User-Agent header used for communication with APM Server now includes
  the `serviceName` and `serviceVersion`. For some users this can be
  https://github.com/elastic/apm/issues/509[helpful for APM Server log analysis].
  ({issues}2364[#2364])

* In a Lambda enviornment we now collect a number of additional data fields
  on the Transaction object.  See the spec for more information on fields collected.
  https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md
  ({issues}2156[#2156])

* Zero configuration support. The only required agent configuration option
  is <<service-name, `serviceName`>>. Normally the agent will attempt to
  infer `serviceName` for the "name" field in a package.json file. However,
  that could fail. With this version, the agent will cope with: a scoped
  package name (`@scope/name` is normalized to `scope-name`), a "name" that
  isn't a valid `serviceName`, not being able to find a "package.json" file,
  etc. Ultimately it will fallback to "nodejs_service". ({issues}1944[#1944])
+
One consequence of this change is that `apm.getServiceName()` will return