@@ -2,8 +2,49 @@
 
 const constants = require('./constants')
 const shimmer = require('./instrumentation/shimmer')
-// used to detect cold starts
+
+// https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md#deriving-cold-starts
 let isFirstRun = true
+
+// https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md#overwriting-metadata
+function getLambdaMetadata (context) {
+  // E.g. 'arn:aws:lambda:us-west-2:123456789012:function:my-function:someAlias'
+  const arnParts = context.invokedFunctionArn.split(':')
+  const serviceId = arnParts.slice(0, 7).join(':')
+  const cloudAccountId = arnParts[4]
+
+  const lambdaMetadata = {
+    service: {
+      name: process.env.AWS_LAMBDA_FUNCTION_NAME,
+      id: serviceId,
+      version: process.env.AWS_LAMBDA_FUNCTION_VERSION,
+      framework: {
+        // Passing this service.framework.name to Client#setExtraMetadata()
+        // ensures that it "wins" over a framework name from
+        // `agent.setFramework()`, because in the client `_extraMetadata`
+        // wins over `_conf.metadata`.
+        name: 'AWS Lambda'
+      },
+      runtime: {
+        name: process.env.AWS_EXECUTION_ENV
+      },
+      node: {
+        configured_name: process.env.AWS_LAMBDA_LOG_STREAM_NAME
+      }
+    },
+    cloud: {
+      provider: 'aws',
+      region: process.env.AWS_REGION,
+      service: {
+        name: 'lambda'
+      },
+      account: {
+        id: cloudAccountId
+      }
+    }
+  }
+  return lambdaMetadata
+}
 
 function shouldCaptureBody (agent) {
   return agent._conf.captureBody === 'all' || agent._conf.captureBody === 'transactions'
@@ -400,6 +441,16 @@ function elasticApmAwsLambda (agent) {
 
     return function wrappedLambda (event, context, callback) {
       log.trace({ awsRequestId: context && context.awsRequestId }, 'lambda: fn start')
+
+      const isColdStart = isFirstRun
+      if (isFirstRun) {
+        isFirstRun = false
+        if (agent._transport) {
+          log.trace({ awsRequestId: context && context.awsRequestId }, 'lambda: setExtraMetadata')
+          agent._transport.setExtraMetadata(getLambdaMetadata(context))
+        }
+      }
+
       let parentId
       let tracestate
       if (event.headers !== undefined) {
@@ -411,10 +462,6 @@ function elasticApmAwsLambda (agent) {
         }
         parentId = normalizedHeaders.traceparent ? normalizedHeaders.traceparent : normalizedHeaders['elastic-apm-traceparent']
         tracestate = normalizedHeaders.tracestate
-      }
-      const isColdStart = isFirstRun
-      if (isFirstRun) {
-        isFirstRun = false
       }
 
       const trans = agent.startTransaction(context.functionName, type, {
