@@ -11,6 +11,8 @@ class NoopTransport {
 
   addMetadataFilter (fn) {}
 
+  setExtraMetadata (metadata) {}
+
   sendSpan (span, cb) {
     if (cb) {
       process.nextTick(cb)
